# cflora

./: .README.md.swp  .gitignore  .gitmodules  AUTHOR  README.md
hardware/Circuit_PCB/CECS_Base_Board/: CECS_BASEBOARD_NEW.DSN  CECS_BASEBOARD_NEW.opj  CECS_BASEBOARD_NEW_Check.pcb  CECS_base_좌표.xlsx
hardware/Circuit_PCB/CECS_Base_Board/PCB_Gerber/: art001.pho  art001.rep  art002.pho  art004.rep  drl001.lst  drl001.rep  sm001021.pho  sm001021.rep  sm002028.rep  sst001026.pho  sst001026.rep
hardware/Circuit_PCB/CECS_MODULE_AtoD/: CECS_MODULE_ATOD.BOM  CECS_MODULE_ATOD.DSN  CECS_Module_AtoD_Check.pcb  CECS_Module_AtoD_좌표.xlsx
hardware/Circuit_PCB/CECS_MODULE_AtoD/PCB_Gerber/: art003.pho  art003.rep  art004.pho  art004.rep  dd001024.pho  drl001.drl  drl001.lst  sm002028.rep  sst001026.rep
hardware/Circuit_PCB/CECS_MODULE_IsoInput/: CECS_MODULE_ISOINPUT.DSN  CECS_MODULE_IsoInput.opj
hardware/Circuit_PCB/CECS_MODULE_IsoInput/PCB_Gerber/: art003.pho
hardware/Circuit_PCB/CECS_MODULE_Relay/: CECS_MODULE_RELAY.BOM  CECS_MODULE_Relay.opj  CECS_Module_Relay_Check.pcb
hardware/Circuit_PCB/CECS_MODULE_Relay/PCB_Gerber/: art002.pho  dd001024.rep  drl001.drl  drl001.rep
hardware/EWIAR_Source/CECS_AnalogModule/EVKIT/: evkit_io.c
hardware/EWIAR_Source/CECS_AnalogModule/EVKIT/include/: evkit_adc.h
hardware/EWIAR_Source/CECS_AnalogModule/settings/: CECS_AnalogModule.dni
hardware/EWIAR_Source/CECS_BaseBoard/: CECS_BaseBoard.dep  CECS_BaseBoard.ewp
hardware/EWIAR_Source/CECS_BaseBoard/EVKIT/: evkit_can.c  evkit_counter3_4.c  evkit_uart1.c
hardware/EWIAR_Source/CECS_BaseBoard/EVKIT/include/: evkit_can.h  evkit_uart3.h
hardware/EWIAR_Source/CECS_BaseBoard/config/: stm32f10x_it.c
hardware/EWIAR_Source/CECS_BaseBoard/settings/: CECS_BaseBoard.wsdt
hardware/EWIAR_Source/CECS_ISOInputModule/: CECS_ISOInputModule.dep  CECS_ISOInputModule.ewp  CECS_ISOInputModule.eww
hardware/EWIAR_Source/CECS_ISOInputModule/EVKIT/: evkit_uart1.c
hardware/EWIAR_Source/CECS_ISOInputModule/settings/: CECS_ISOInputModule.dni  CECS_ISOInputModule.wsdt
hardware/EWIAR_Source/CECS_RelayModule/: CECS_RelayModule.dep  CECS_RelayModule.eww
hardware/EWIAR_Source/CECS_RelayModule/Debug/Exe/: CECS_RelayModule.out
hardware/EWIAR_Source/CECS_RelayModule/EVKIT/: evkit_message.c  evkit_uart3.c
hardware/EWIAR_Source/CECS_RelayModule/EVKIT/include/: evkit_uart3.h
hardware/EWIAR_Source/CECS_RelayModule/settings/: CECS_RelayModule.dbgdt  CECS_RelayModule.dni
hardware/ver.1/Circuit_PCB/: CECS_atod_base_PL.xlsx
hardware/ver.1/Circuit_PCB/CECS_Base_Board/: CECS_BASEBOARD_NEW.BOM
hardware/ver.1/Circuit_PCB/CECS_Base_Board/PCB_Gerber/: art002.rep  art003.pho  art003.rep  art004.pho  dd001024.pho  dd001024.rep  drl001.drl  sm002028.pho  ssb002029.pho
hardware/ver.1/Circuit_PCB/CECS_MODULE_AtoD/: CECS_MODULE_AtoD.opj
hardware/ver.1/Circuit_PCB/CECS_MODULE_AtoD/PCB_Gerber/: art001.pho  art001.rep  art002.pho  art002.rep  dd001024.rep  drl001.rep  sm001021.pho  sm001021.rep  (+3 more)
hardware/ver.1/Circuit_PCB/CECS_MODULE_IsoInput/: CECS_MODULE_ISOINPUT.BOM  CECS_MODULE_IsoInput_pl.xlsx  CECS_MODULE_IsoInput_좌표데이터.xlsx  CECS_Module_IsoInput_Check.pcb
hardware/ver.1/Circuit_PCB/CECS_MODULE_Relay/: CECS_MODULE_RELAY.DSN  CECS_Module_Relay_PL.xlsx  CECS_Module_Relay_좌표데이터.xlsx
hardware/ver.1/EWIAR_Source/CECS_AnalogModule/: CECS_AnalogModule.c  CECS_AnalogModule.dep  CECS_AnalogModule.ewp  CECS_AnalogModule.eww
hardware/ver.1/EWIAR_Source/CECS_BaseBoard/: CECS_BaseBoard.c  CECS_BaseBoard.ewd  CECS_BaseBoard.eww  def_application.h
hardware/ver.1/EWIAR_Source/CECS_ISOInputModule/: CECS_ISOInputModule.c  def_application.h
hardware/ver.1/EWIAR_Source/CECS_RelayModule/: CECS_RelayModule.c  CECS_RelayModule.ewp
hardware/ver.2/cecs/: m4_cecs.dep  m4_cecs.ewd  m4_cecs.ewp  m4_cecs.eww  m4_cecs_analog.c  m4_cecs_base.c  m4_cecs_base.c.bak  m4_cecs_can.c  m4_cecs_io_base.c  m4_cecs_isoin.c  m4_cecs_relay.c  m4_cecs_uart1.c  m4_cecs_uart3.c  m4_cecs_uart6.c  m4_evkit_define.c  m4_evkit_message.c
hardware/ver.2/cecs/config/: arm_comm.h  stm32f4xx.h  stm32f4xx_flash.icf  stm32f4xx_it.c  stm32f4xx_it.h
hardware/ver.2/cecs/include/: m4_application.h  m4_cecs_analog.h  m4_cecs_can.h  m4_cecs_io_base.h  m4_cecs_isoin.h  m4_cecs_relay.h  m4_cecs_uart1.h  m4_cecs_uart3.h  m4_cecs_uart6.h  m4_evkit_define.h  m4_evkit_message.h
hardware/ver.2/cecs/settings/: m4_cecs.cspy.bat  m4_cecs.dbgdt  m4_cecs.dni  m4_cecs.wsdt
software/conf/: cflora-device.ini  cflora-server.ini
software/gcg/: CMakeLists.txt
software/gcg/include/: gcg_base.h  gcg_config.h  gcg_connection.h  gcg_server.h
software/gcg/src/: CMakeLists.txt  gcg.cpp  gcg_config.cpp  gcg_connection.cpp  gcg_server.cpp
software/gcg/test/: CMakeLists.txt  test_msgbuf.c
software/gos/: CMakeLists.txt
software/gos/include/: gos_base.h  gos_config.h  gos_connection.h  gos_control.h  gos_device.h  gos_process.h  gos_rule.h  gos_server.h  gos_vsensor.h
software/gos/src/: CMakeLists.txt  gos.c  gos_config.c  gos_connection.c  gos_device.c  gos_process.c  gos_rule.c  gos_server.c  gos_vsensor.c
software/gos/test/: CMakeLists.txt  test_control.c
software/install/: build.sh  cflora  cflora-mon.sh  cflora-restart.sh  cflora-run.sh  cflora-stop.sh  clean.sh  install.sh
software/libcflora/: CMakeLists.txt
software/libcflora/include/: cf.h  cf_base.h  cf_config.h  cf_control.h  cf_db.h  cf_db_mysql.h  cf_msgbuf.h
software/libcflora/src/: CMakeLists.txt  cf_base.c  cf_config.c  cf_control.c  cf_db.c  cf_db_mysql.c  cf_msgbuf.c
software/libcflora/test/: CMakeLists.txt  cflora_server.ini  test.h  test_config.c  test_control.c  test_db.c  test_msgbuf.c
software/libtp12/: CMakeLists.txt
software/libtp12/include/: Packet.h  TTA12_define.h  TTA12_packet.h  common.h  dictionary.h  tcpman.h  tp12.h  util.h
software/libtp12/src/: CMakeLists.txt  Packet.cpp  TTA12_packet.cpp  tcpman.cpp  util.cpp
software/node/: CMakeLists.txt
software/node/include/: hwctrl.h  rs232.h
software/node/src/: CMakeLists.txt  TTA12daemon.cpp  hwctrl.c  rs232.c  sample.cpp
(+159 files in other folders)
