CMAKE_MINIMUM_REQUIRED (VERSION 2.6)
PROJECT (node)

SET (EXECUTABLE_OUTPUT_PATH ../bin)

FIND_LIBRARY (TP12LIB NAMES tp12 PATHS ../../libtp12/release/lib)
FIND_LIBRARY (INIPLIB NAMES iniparser PATHS ../../iniparser)

INCLUDE_DIRECTORIES (../include ../../libtp12/include /usr/local/include)

SET (SRCS hwctrl.c  rs232.c  TTA12daemon.cpp)

ADD_EXECUTABLE (node ${SRCS})

TARGET_LINK_LIBRARIES (node ${TP12LIB})
TARGET_LINK_LIBRARIES (node ${INIPLIB})
TARGET_LINK_LIBRARIES (node pthread)
TARGET_LINK_LIBRARIES (node rt)

